# flex-rml

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  FlexRML.cpp  FlexRML.h  LICENSE-MIT.txt  Makefile  README.md  RMLite.cpp  RMLite.h  THIRD_PARTY_NOTICES.txt  build.sh  build_standalone.sh  city.cpp  custom_io.cpp  custom_io.h  data  definitions.h  file_handling.cpp  file_handling.h  flexrml.cpp  flexrml.h  flexrml.py  json_handling.cpp  json_handling.h  main.cpp  pyproject.toml  rdf_parser.cpp  rdf_parser.h  rdf_vector_helper.cpp  rdf_vector_helper.h  requirements.txt  requirements_build.txt  rml_extractor.cpp  rml_extractor.h  rml_uris.h  setup.py  setup.sh  string_helper.cpp  (+5 more)
Json/: ArduinoJson.h
backend/: backend.py
backend/executor/: complex_executor.cpp  complex_executor.h  executor.cpp  simple_executor.cpp  simple_executor.h  utils.cpp  utils.h
example/: mapping.ttl  sensor_values.csv
file_reader/: csv_reader  csv_reader.cpp  csv_reader.h  file_reader.h  json_reader.cpp  json_reader.h
frontend/functions/: rml_functions.cpp
frontend/rdf_parser/: definitions.h  rdf_parser_lib.cpp
rdf_parser/: string.cpp
src/flexrml/: core.py  flexcore.py
src/flexrml/backend/: backend.py
src/flexrml/backend/executor/: complex_executor.cpp  definitions.h  simple_executor_threaded.cpp
src/flexrml/backend/optimizations/: ra_expression_partitioner.cpp
src/flexrml/frontend/functions/: rml_functions.cpp
src/flexrml/frontend/ra_converter/: ra_converter_rml_core.cpp
src/flexrml/frontend/rdf_parser/: rdf_parser.cpp  rdf_parser.h
src/flexrml/frontend/rml_normalizer/: rml_core_normalizer.cpp
